[gd_scene load_steps=47 format=3 uid="uid://tbt13yx4jqlu"]

[ext_resource type="Script" uid="uid://c6hjou7qnhtq1" path="res://player/scripts/player.gd" id="1_yrj62"]
[ext_resource type="Texture2D" uid="uid://cekynk6au5q46" path="res://assets/2D/icon.svg" id="2_cujlr"]
[ext_resource type="Texture2D" uid="uid://cwde03yxl5jhb" path="res://assets/2D/raccoon_standalone.png" id="2_xxnll"]
[ext_resource type="Script" uid="uid://dd1lhpc8tx8bs" path="res://conversations/scripts/npc.gd" id="3_0klkc"]
[ext_resource type="Texture2D" uid="uid://dhgxpohpcf3ri" path="res://assets/2D/dog_standalone.png" id="3_4cq84"]
[ext_resource type="Script" uid="uid://whl7imbeho87" path="res://conversations/scripts/conversation_manager.gd" id="3_cujlr"]
[ext_resource type="Script" uid="uid://c70mklo1x8ejh" path="res://conversations/scripts/actions_container.gd" id="4_g22w2"]
[ext_resource type="Texture2D" uid="uid://6qljj14tps4p" path="res://assets/2D/crow_standalone.png" id="4_hyf7r"]
[ext_resource type="Texture2D" uid="uid://dfgbqmpvll76r" path="res://assets/2D/rabbit_standalone.png" id="5_vlj36"]
[ext_resource type="Script" uid="uid://cyfwhfe2kje38" path="res://conversations/resources/export_action_base.gd" id="7_hyf7r"]
[ext_resource type="Script" uid="uid://cyki6qnhkgn0e" path="res://conversations/resources/export_dialogue_base.gd" id="8_64m0k"]
[ext_resource type="Script" uid="uid://cg1jpv1aml84u" path="res://conversations/resources/action_changes_resource.gd" id="9_qw4sj"]
[ext_resource type="Script" uid="uid://c3lald0g7kupl" path="res://conversations/resources/action_changes_information.gd" id="10_22ap8"]
[ext_resource type="Script" uid="uid://dmxv4647md3in" path="res://conversations/resources/words_resource.gd" id="11_emxd4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_808s8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_lc78t"]

[sub_resource type="Sky" id="Sky_g8iyb"]
sky_material = SubResource("ProceduralSkyMaterial_lc78t")

[sub_resource type="Environment" id="Environment_808s8"]
background_mode = 2
sky = SubResource("Sky_g8iyb")

[sub_resource type="Resource" id="Resource_4cq84"]
script = ExtResource("7_hyf7r")
action = "leave"
character_connected = Array[int]([4])
metadata/_custom_type_script = "uid://cyfwhfe2kje38"

[sub_resource type="Resource" id="Resource_x05qy"]
script = ExtResource("7_hyf7r")
action = "(smell)"
character_connected = Array[int]([2])
metadata/_custom_type_script = "uid://cyfwhfe2kje38"

[sub_resource type="Resource" id="Resource_0253g"]
script = ExtResource("7_hyf7r")
action = "why do you smell like disinfectant?"
metadata/_custom_type_script = "uid://cyfwhfe2kje38"

[sub_resource type="Resource" id="Resource_oqpth"]
script = ExtResource("11_emxd4")
title = "npc"
text = "bye"
metadata/_custom_type_script = "uid://dmxv4647md3in"

[sub_resource type="Resource" id="Resource_64m0k"]
script = ExtResource("11_emxd4")
title = "you"
text = "bye!"
metadata/_custom_type_script = "uid://dmxv4647md3in"

[sub_resource type="Resource" id="Resource_kvok1"]
script = ExtResource("8_64m0k")
action = "leave"
words = Array[ExtResource("11_emxd4")]([SubResource("Resource_oqpth"), SubResource("Resource_64m0k")])
greater_details = 2
metadata/_custom_type_script = "uid://cyki6qnhkgn0e"

[sub_resource type="Resource" id="Resource_qw4sj"]
script = ExtResource("10_22ap8")
character_to_effect = 2
metadata/_custom_type_script = "uid://c3lald0g7kupl"

[sub_resource type="Resource" id="Resource_22ap8"]
script = ExtResource("9_qw4sj")
action = "(smell)"
access_change = Array[ExtResource("10_22ap8")]([SubResource("Resource_qw4sj")])
metadata/_custom_type_script = "uid://cg1jpv1aml84u"

[sub_resource type="Resource" id="Resource_emxd4"]
script = ExtResource("10_22ap8")
character_to_effect = 3
action_access = true
metadata/_custom_type_script = "uid://c3lald0g7kupl"

[sub_resource type="Resource" id="Resource_203i0"]
script = ExtResource("10_22ap8")
character_to_effect = 2
action_access = true
metadata/_custom_type_script = "uid://c3lald0g7kupl"

[sub_resource type="Resource" id="Resource_t3w23"]
script = ExtResource("9_qw4sj")
action = "why do you smell like disinfectant?"
access_change = Array[ExtResource("10_22ap8")]([SubResource("Resource_emxd4"), SubResource("Resource_203i0")])
metadata/_custom_type_script = "uid://cg1jpv1aml84u"

[sub_resource type="Resource" id="Resource_1wpoa"]
script = ExtResource("11_emxd4")
title = "npc"
text = "wha"
metadata/_custom_type_script = "uid://dmxv4647md3in"

[sub_resource type="Resource" id="Resource_iu67r"]
script = ExtResource("11_emxd4")
title = "npc"
text = "why..?"
metadata/_custom_type_script = "uid://dmxv4647md3in"

[sub_resource type="Resource" id="Resource_uf8mi"]
script = ExtResource("11_emxd4")
title = "npc"
text = "please leave"
metadata/_custom_type_script = "uid://dmxv4647md3in"

[sub_resource type="Resource" id="Resource_s7ufk"]
script = ExtResource("8_64m0k")
action = "(smell)"
words = Array[ExtResource("11_emxd4")]([SubResource("Resource_1wpoa"), SubResource("Resource_iu67r"), SubResource("Resource_uf8mi")])
action_changes = Array[ExtResource("9_qw4sj")]([SubResource("Resource_22ap8"), SubResource("Resource_t3w23")])
greater_details = 3
metadata/_custom_type_script = "uid://cyki6qnhkgn0e"

[sub_resource type="Resource" id="Resource_rkaph"]
script = ExtResource("10_22ap8")
character_to_effect = 2
metadata/_custom_type_script = "uid://c3lald0g7kupl"

[sub_resource type="Resource" id="Resource_ge3pg"]
script = ExtResource("10_22ap8")
character_to_effect = 3
metadata/_custom_type_script = "uid://c3lald0g7kupl"

[sub_resource type="Resource" id="Resource_cmf6o"]
script = ExtResource("9_qw4sj")
action = "why do you smell like disinfectant?"
access_change = Array[ExtResource("10_22ap8")]([SubResource("Resource_rkaph"), SubResource("Resource_ge3pg")])
metadata/_custom_type_script = "uid://cg1jpv1aml84u"

[sub_resource type="Resource" id="Resource_67xdk"]
script = ExtResource("11_emxd4")
title = "npc"
text = "I.. uh.."
metadata/_custom_type_script = "uid://dmxv4647md3in"

[sub_resource type="Resource" id="Resource_juyqu"]
script = ExtResource("11_emxd4")
title = "npc"
text = "idk.."
metadata/_custom_type_script = "uid://dmxv4647md3in"

[sub_resource type="Resource" id="Resource_01e4t"]
script = ExtResource("11_emxd4")
title = "npc"
text = "..."
metadata/_custom_type_script = "uid://dmxv4647md3in"

[sub_resource type="Resource" id="Resource_g2vx5"]
script = ExtResource("8_64m0k")
action = "why do you smell like disinfectant?"
words = Array[ExtResource("11_emxd4")]([SubResource("Resource_67xdk"), SubResource("Resource_juyqu"), SubResource("Resource_01e4t")])
action_changes = Array[ExtResource("9_qw4sj")]([SubResource("Resource_cmf6o")])
greater_details = 3
metadata/_custom_type_script = "uid://cyki6qnhkgn0e"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ln6bc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_trcpl"]
radius = 1.0
height = 2.5

[sub_resource type="Resource" id="Resource_d7nge"]
script = ExtResource("7_hyf7r")
action = "leave"
character_connected = Array[int]([4])
metadata/_custom_type_script = "uid://cyfwhfe2kje38"

[sub_resource type="Resource" id="Resource_rkh4j"]
script = ExtResource("7_hyf7r")
action = "continue"
character_connected = Array[int]([4])
metadata/_custom_type_script = "uid://cyfwhfe2kje38"

[sub_resource type="LabelSettings" id="LabelSettings_g22w2"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_0klkc"]
line_spacing = 12.81
font_size = 36

[node name="Node3D" type="Node3D"]

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
size = Vector3(15, 1, 15)

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 2.5, -5)
size = Vector3(3, 4, 5)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -8)
size = Vector3(15, 5, 7)

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9396926, 0.34202012, 0, -0.34202012, 0.9396926, 0, 0, 0, 1, 0.29, 0.1, -3.5)
size = Vector3(12, 5, 2)

[node name="player" type="CharacterBody3D" parent="." node_paths=PackedStringArray("camera", "camera_position_holder") groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.3999999, 1.1999999)
collision_layer = 3
script = ExtResource("1_yrj62")
camera = NodePath("camera_position_holder/SpringArm3D/Camera3D")
camera_position_holder = NodePath("camera_position_holder")
raccoon_sprite = ExtResource("2_xxnll")
dog_sprite = ExtResource("3_4cq84")
crow_sprite = ExtResource("4_hyf7r")
rabbit_sprite = ExtResource("5_vlj36")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="player"]
shape = SubResource("CapsuleShape3D_808s8")

[node name="Sprite3D" type="Sprite3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.679, 0)
texture = ExtResource("2_xxnll")
region_rect = Rect2(0, 0, 232, 366)

[node name="camera_position_holder" type="Marker3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 0.8660254, 0.5, 0, -0.5, 0.8660254, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="player/camera_position_holder"]
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="player/camera_position_holder/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
omni_range = 300.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_808s8")

[node name="npc" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.5, 0)
script = ExtResource("3_0klkc")
actions = Array[ExtResource("7_hyf7r")]([SubResource("Resource_4cq84"), SubResource("Resource_x05qy"), SubResource("Resource_0253g")])
export_dialogue = Array[ExtResource("8_64m0k")]([SubResource("Resource_kvok1"), SubResource("Resource_s7ufk"), SubResource("Resource_g2vx5")])

[node name="StaticBody3D" type="StaticBody3D" parent="npc"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="npc/StaticBody3D"]
shape = SubResource("CapsuleShape3D_ln6bc")

[node name="Sprite3D" type="Sprite3D" parent="npc/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.39999998, 0)
billboard = 2
texture = ExtResource("2_cujlr")

[node name="Interaction_range" type="Area3D" parent="npc" groups=["player"]]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="npc/Interaction_range"]
shape = SubResource("CapsuleShape3D_trcpl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="conversation_manager" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("speaker_title", "writing", "actions_container") groups=["conversation_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_cujlr")
speaker_title = NodePath("VBoxContainer/Panel/HBoxContainer/VBoxContainer/Panel/HBoxContainer/speaker_title")
writing = NodePath("VBoxContainer/Panel/HBoxContainer/VBoxContainer/MarginContainer/writing")
actions_container = NodePath("VBoxContainer/Panel/HBoxContainer/Panel/MarginContainer/ScrollContainer/actions container")
leave_action = SubResource("Resource_d7nge")
continue_action = SubResource("Resource_rkh4j")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/conversation_manager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer/conversation_manager/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Panel" type="Panel" parent="CanvasLayer/conversation_manager/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Panel" type="Panel" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="speaker_title" type="Label" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 10.0
text = "dhfthgghj"
label_settings = SubResource("LabelSettings_g22w2")
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="writing" type="Label" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 3
text = "test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text test text "
label_settings = SubResource("LabelSettings_0klkc")
autowrap_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="actions container" type="VBoxContainer" parent="CanvasLayer/conversation_manager/VBoxContainer/Panel/HBoxContainer/Panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_g22w2")

[connection signal="body_entered" from="npc/Interaction_range" to="npc" method="_on_interaction_range_body_entered"]
[connection signal="body_exited" from="npc/Interaction_range" to="npc" method="_on_interaction_range_body_exited"]
